# bitcoinvg-1

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  .travis.yml  CODEOWNERS  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac  libbitcoinvgconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  bitcoin_config.h  bitcoinvg.sln  bitcoinvg_config.h  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
contrib/: README.md  bitcoin-pos-cli.bash-completion  bitcoin-pos-tx.bash-completion  bitcoin-posd.bash-completion  bitcoinvg-cli.bash-completion  bitcoinvg-qt.pro  bitcoinvg-tx.bash-completion  bitcoinvgd.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  bitcoinvg-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  bitcoinvg-cli.1  bitcoinvg-qt.1  bitcoinvg-tx.1  bitcoinvg-wallet.1  bitcoinvgd.1
share/: genbuild.sh  setup.nsi.in
(+854 files in other folders)
