dist_man1_MANS=

if BUILD_BITCOINVGD
  dist_man1_MANS+=bitcoinvgd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoinvg-qt.1
endif

if BUILD_BITCOINVG_CLI
  dist_man1_MANS+=bitcoinvg-cli.1
endif

if BUILD_BITCOINVG_TX
  dist_man1_MANS+=bitcoinvg-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOINVG_WALLET
  dist_man1_MANS+=bitcoinvg-wallet.1
endif
endif
